--- a/config/template.config.toml
+++ b/config/template.config.toml
@@ -3,9 +3,11 @@ host = "localhost"
 port = 1883
 keepalive = 60
 
-[pg]
+[postgresql]
 host = "localhost"
 port = 5432
 dbname = "mqtt2pg"
 user = "postgres"
 password = "postgres"
+
+[topics]
