--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 appdirs==1.4.3
+argh==0.26.2
 atomicwrites==1.3.0
 attrs==19.1.0
 black==19.3b0
@@ -6,10 +7,13 @@ Click==7.0
 coverage==4.5.3
 more-itertools==7.0.0
 paho-mqtt==1.4.0
+pathtools==0.1.2
 pluggy==0.9.0
 psycopg2-binary==2.8.2
 py==1.8.0
 pytest==4.4.1
 pytest-cov==2.6.1
+PyYAML==5.1
 six==1.12.0
 toml==0.10.0
+watchdog==0.9.0
