--- a/requirements.txt
+++ b/requirements.txt
@@ -9,11 +9,11 @@ more-itertools==7.0.0
 paho-mqtt==1.4.0
 pathtools==0.1.2
 pluggy==0.9.0
-psycopg2-binary==2.8.2
 py==1.8.0
 pytest==4.4.1
 pytest-cov==2.6.1
 PyYAML==5.1
 six==1.12.0
+SQLAlchemy==1.3.3
 toml==0.10.0
 watchdog==0.9.0
